# Triox

./: .dockerignore  .env  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  makefile  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: clippy-fmt.yml  coverage.yml  linux.yml  rust.yml
config/: default.toml  local.toml
data/static/: files.html  index.html
data/static/JS/: main.js
docs/: DEPLOYMENT.md
migrations/: 20210303102817_users.sql  20210706075616_triox_users.sql
migrations/2020-09-29-202232_users/: up.sql
src/: app_conf.rs  app_state.rs  auth.rs  cli.rs  config.rs  error_handler.rs  errors.rs  hash.rs  jwt.rs  main.rs  tests-migrate.rs
src/api/v1/: auth.rs  meta.rs  mod.rs
src/api/v1/account/: delete.rs  email.rs  mod.rs  test.rs  username.rs
src/api/v1/tests/: auth.rs  protected.rs
src/apps/files/: copy.rs  create_dir.rs  get.rs  list.rs  mod.rs  move.rs  mv.rs  remove.rs  up.rs  upload.rs
src/auth/: mod.rs
src/database/: mod.rs
src/database/users/: mod.rs  util.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/tests/: auth_test.rs  files.rs  get_test.rs  helpers.rs  mod.rs  util.rs
src/tests/files/: get.rs  mod.rs
static/: files.html  index.html  sign_in.html  sign_up.html
static/CSS/: main.css
static/JS/: files.js  files_ui.js  main.js
test_scripts/: auth_test.sh
triox-frontend/: Cargo.toml
triox-frontend/src/: lib.rs
triox-server/: Cargo.toml
triox-server/src/: app_conf.rs  auth.rs  hash.rs  jwt.rs  main.rs
triox-server/src/apps/: mod.rs
triox-server/src/apps/files/: list.rs
triox-server/src/database/: mod.rs  schema.rs
triox-server/src/database/users/: mod.rs
triox-server/src/tests/: auth_test.rs
triox-server/test_scripts/: auth_test.sh
