[package]
name = "triox"
version = "0.1.0"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2018"
description = "An open source cloud server that focuses on speed, reliability and security"
repository = "https://github.com/AaronErhardt/Triox"
readme = "README.md"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# config
config = "*"

# random
rand = "0.8"

# concurrent map
dashmap = "4"

# log
log = "0.4"
env_logger = "0.8"

# serde
serde = { version = "1", features = ["derive"] }

# actix
mime = "0.3"
actix-rt = "1"
actix-files = "0.5"
actix-multipart = "0.3"
actix-governor = "0.2"
actix-web = { version = "3", features = ["openssl"] }
actix-identity = "0.3"
actix-service = "1.0.6"
openssl = { version = "0.10.29", features = ["vendored"] }

sqlx = { version = "0.4.0", features = [ "runtime-actix-rustls", "postgres", "time", "offline" ] }
argon2-creds = { branch = "master", git = "https://github.com/realaravinth/argon2-creds"}
lazy_static = "1.4"
my-codegen = {package = "actix-web-codegen", git ="https://github.com/realaravinth/actix-web"}

# futures
futures = "0.3"
tokio = { version = "0.2", features = ["fs"] }

# argument parsing
clap = "2.33"

# derive macros
derive_more = "0.99"
